syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.alissonprado";
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.academy.alissonprado;

service RegistraPixService {
  rpc registraPix (RegistraPixRequest) returns (RegistraPixResponse) {}
}

service RemovePixService {
  rpc removePix (RemovePixRequest) returns (RemovePixResponse) {}
}

message RegistraPixRequest {
  string    idClienteBanco = 1;
  TipoConta tipoConta      = 2;
  TipoChave tipoChave      = 3;
  string    chave          = 4;
}

message RegistraPixResponse {
  string idPix = 1;
}

message RemovePixRequest {
  string    idPix = 1;
  string    idClienteBanco = 2;
}

message RemovePixResponse {
  string mensagem = 1;
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}